<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_filter_pkg</name>
  <version>0.0.1</version>
  <description>A ROS 2 package to filter specific TF transforms.</description>
  <maintainer email="your_email@example.com">Brad</maintainer>
  <license>Apache License 2.0</license> <!-- Or your preferred license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Add dependencies for the messages used in your Python script -->
  <depend>rclpy</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend> <!-- Though not directly used for TransformStamped, it's good practice if dealing with TF -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>